--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "setTimeout on steroids",
   "main": "index.js",
   "scripts": {
-    "test": "exit 0"
+    "lint": "eslint --ext .js ./ && tsc",
+    "test": "exit 0",
+    "prepack": "tsc --noEmit false --declaration --emitDeclarationOnly"
   },
   "repository": {
     "type": "git",
@@ -19,8 +21,11 @@
     "url": "https://github.com/trans-eu"
   },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/trans-eu/set-delay/issues"
-  },
-  "homepage": "https://github.com/trans-eu/set-delay#readme"
+  "type": "module",
+  "types": "index.d.ts",
+  "devDependencies": {
+    "eslint": "^8.38.0",
+    "eslint-plugin-jsdoc": "^46.8.2",
+    "typescript": "^5.2.2"
+  }
 }
